# sigillin

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-DOCS  README.md  RELEASE_GUIDE.md  domains.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  cli.md  index.md
src/sigillin/: __init__.py  cli.py  core.py  entropy_table_bridge.py  sigillin_record.py
tests/: test_cli.py  test_core.py  test_sigillin_record.py
