[project]
name = "sigillin"
version = "1.0.0"
description = "The poetic-symbolic interface layer of the GenesisAeon stack - self-referential sigil parser, trilayer validation (YAML/JSON/Markdown) and MandalaMap resonance."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "GenesisAeon Team", email = "team@genesisaeon.org" }]
requires-python = ">=3.10"
keywords = ["sigil", "mandala", "symbolic", "poetry", "crep", "genesisaeon", "trilayer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Artistic Software",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.15.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
stack = [
    "fieldtheory>=1.0.0",
    "cosmic-moment>=1.0.0",
    "medium-modulation>=1.0.0",
    "entropy-governance>=1.0.0",
    "entropy-table>=2.0.0",
    "implosive-genesis>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.27",
    "mkdocs-material>=9.6",
]

[project.scripts]
sig = "sigillin.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/sigillin"
Issues = "https://github.com/GenesisAeon/sigillin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sigillin"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sigillin --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

